# Dioxus-Demo-App

./: .gitignore  Cargo.toml  README.md
.github/workflows/: macos.yml  rust.yml  ubuntu.yml  windows.yml
app/: Cargo.toml
app/src/: main.rs
facilities/: Cargo.toml
facilities/src/: lib.rs  logger.rs
gui/: Cargo.toml  style.css  waviy.css
gui/src/: chart.rs  common.rs  header.rs  home.rs  lib.rs  loading.rs  main_window.rs  settings.rs  theme.rs
gui/src/component/: sidebar.rs  title.rs
gui/src/section/: body.rs  footer.rs  header.rs  mod.rs
gui/src/view/: common.rs  home.rs  loading.rs  mod.rs  settings.rs
ui/: Cargo.toml  style.css
ui/src/: chart.rs  main_window.rs  theme.rs
ui/src/component/: hamburger_icon.rs  mod.rs  sidebar.rs  sliding_menu.rs  theme_toggle.rs  title.rs
ui/src/section/: body.rs  header.rs
ui/src/view/: common.rs  home.rs  loading.rs
