[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.8.5"
webbrowser = "0.8.11"

facilities = { path = "../facilities" }
